# strava_commute

./: .cursorrules  app.py  package-lock.json  pyproject.toml
templates/: base.html  index.html  stats.html
