[project]
name = "strava-commute"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "folium>=0.20.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polyline>=2.0.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "stravalib>=2.4",
]
